--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -29,9 +29,10 @@
       display: grid;
       grid-template-columns: repeat(2, 1fr);
 
-      h2 {
+      .title_menu {
         margin: 1% 3%;
         grid-column: 1/-1;
+        white-space: nowrap;
       }
     }
 
@@ -56,6 +57,12 @@
     }
 
     /* page restaurant*/
+    .picture {
+      max-height: 32rem;
+      object-fit: cover;
+      width: 100%;
+      overflow: hidden;
+    }
     .menu {
       .title {
         display: flex;
@@ -64,16 +71,6 @@
         i {
           margin: 5px 20px;
         }
-      }
-      h3 {
-        display: flex;
-        justify-content: center;
-        margin-top: 5%;
-        font-size: larger;
-      }
-      .categorie .bar_divider {
-        display: flex;
-        justify-content: center;
       }
       .order {
         max-width: 300px;
