--- a/sass/style.scss
+++ b/sass/style.scss
@@ -140,7 +140,7 @@ header {
     margin: 8px;
     padding: 20px;
     background-color: #f6f6f6;
-    font-size: 1 rem;
+    font-size: 1rem;
     font-weight: 500;
     justify-content: center;
     align-items: center;
@@ -266,7 +266,7 @@ header {
       h3 {
         font-weight: bold;
         font-size: 1.3rem;
-        initial-letter-align: 1.55px;
+        initial-letter-align: 1.5px;
       }
 
       p {
@@ -423,7 +423,7 @@ header {
 
       i {
         background: #fff;
-        aspect-ratio: 1;
+        aspect-ratio: 1 / 1;
         width: 1.5rem;
         border-radius: 50%;
         color: $third-color;
