--- a/style.css
+++ b/style.css
@@ -1,38 +1,11 @@
 @charset "UTF-8";
 /*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
-html,
-body,
-p,
-ol,
-ul,
-li,
-dl,
-dt,
-dd,
-blockquote,
-figure,
-fieldset,
-legend,
-textarea,
-pre,
-iframe,
-hr,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+html, body, p, ol, ul, li, dl, dt, dd, blockquote, figure, fieldset, legend, textarea, pre, iframe, hr, h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
   font-size: 100%;
   font-weight: normal;
 }
@@ -41,9 +14,7 @@ ul {
   list-style: none;
 }
 
-button,
-input,
-select {
+button, input, select {
   margin: 0;
 }
 
@@ -51,14 +22,11 @@ html {
   box-sizing: border-box;
 }
 
-*,
-*::before,
-*::after {
+*, *::before, *::after {
   box-sizing: inherit;
 }
 
-img,
-video {
+img, video {
   height: auto;
   max-width: 100%;
 }
@@ -72,8 +40,7 @@ table {
   border-spacing: 0;
 }
 
-td,
-th {
+td, th {
   padding: 0;
 }
 
@@ -397,11 +364,7 @@ header button:hover {
 .searchbox .presentation button {
   border-radius: 25px;
   border: none;
-  background: linear-gradient(
-    0deg,
-    rgb(147, 86, 220) 0%,
-    rgb(255, 121, 218) 100%
-  );
+  background: linear-gradient(0deg, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 100%);
   color: white;
   font-size: 0.9rem;
   padding: 13px;
@@ -409,13 +372,7 @@ header button:hover {
   cursor: pointer;
 }
 .searchbox .presentation button:hover {
-  background: linear-gradient(
-    170deg,
-    rgba(255, 121, 218, 0.8) 0%,
-    rgba(214, 108, 219, 0.8) 39%,
-    rgba(171, 94, 220, 0.8) 85%,
-    rgba(155, 89, 220, 0.8) 100%
-  );
+  background: linear-gradient(170deg, rgba(255, 121, 218, 0.8) 0%, rgba(214, 108, 219, 0.8) 39%, rgba(171, 94, 220, 0.8) 85%, rgba(155, 89, 220, 0.8) 100%);
   box-shadow: 4px 4px 2px rgb(172, 171, 171);
 }
 
@@ -553,7 +510,6 @@ header button:hover {
 .restaurant article div h3 {
   font-weight: bold;
   font-size: 1.3rem;
-  initial-letter-align: 1.5px;
 }
 .restaurant article div p {
   margin-top: 5px;
@@ -715,11 +671,7 @@ header button:hover {
 .menu .order {
   border-radius: 25px;
   border: none;
-  background: linear-gradient(
-    0deg,
-    rgb(147, 86, 220) 0%,
-    rgb(255, 121, 218) 100%
-  );
+  background: linear-gradient(0deg, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 100%);
   color: white;
   font-size: 0.9rem;
   padding: 13px;
@@ -731,13 +683,7 @@ header button:hover {
   transform: translateX(-50%);
 }
 .menu .order:hover {
-  background: linear-gradient(
-    170deg,
-    rgba(255, 121, 218, 0.8) 0%,
-    rgba(214, 108, 219, 0.8) 39%,
-    rgba(171, 94, 220, 0.8) 85%,
-    rgba(155, 89, 220, 0.8) 100%
-  );
+  background: linear-gradient(170deg, rgba(255, 121, 218, 0.8) 0%, rgba(214, 108, 219, 0.8) 39%, rgba(171, 94, 220, 0.8) 85%, rgba(155, 89, 220, 0.8) 100%);
   box-shadow: 4px 4px 2px rgb(172, 171, 171);
 }
 
