--- a/style.css
+++ b/style.css
@@ -195,8 +195,11 @@ td, th {
     justify-content: center;
     margin: 4% 0;
   }
-  body .menu .title i {
+  body .menu .title .favorite {
     margin: 5px 20px;
+  }
+  body .menu .title .favorite .fas {
+    margin-left: -2rem;
   }
   body .menu .order {
     max-width: 300px;
@@ -269,8 +272,11 @@ td, th {
     justify-content: center;
     margin: 4% 0;
   }
-  body .menu .title i {
+  body .menu .title .favorite {
     margin: 5px 20px;
+  }
+  body .menu .title .favorite .fas {
+    margin-left: -2rem;
   }
   body .menu .categorie1 {
     grid-column: 1/2;
@@ -489,7 +495,7 @@ header button:hover {
   height: 200px;
   object-fit: cover;
 }
-.restaurant article figure button {
+.restaurant article figure span {
   position: absolute;
   display: block;
   background-color: #99e2d0;
@@ -594,24 +600,27 @@ header button:hover {
 .menu h3 + .bar_divider {
   margin-bottom: 10px;
 }
-.menu article .favorite {
+.menu .favorite {
   position: relative;
+  border: #353535 1px solid;
 }
-.menu article .favorite i {
-  position: absolute;
+.menu .favorite i {
+  position: relative;
 }
 .menu .favorite .fas {
   color: transparent;
   background-image: linear-gradient(#ff79da, #9356dc);
   background-clip: text;
   -webkit-background-clip: text;
-  position: absolute;
+  margin-left: -2rem;
   opacity: 0;
+  position: absolute;
   transition: all 0.4s;
 }
 .menu .favorite .fas:hover {
   opacity: 1;
   transform: scale(1.1);
+  transform: translateY(2px);
   cursor: pointer;
 }
 .menu article {
