--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,7 +36,7 @@ header {
     padding: 10px;
   }
 
-  button {
+  a {
     border: none;
     background-color: transparent;
     font-size: x-large;
