--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -28,8 +28,8 @@
     .restaurant {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
-
-      .title_menu {
+      justify-items: center;
+      h2 {
         margin: 1% 3%;
         grid-column: 1/-1;
         white-space: nowrap;
